--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.7.RELEASE</version>
             </plugin>
         </plugins>
     </build>
