--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,11 @@
             <artifactId>swagger-bootstrap-ui</artifactId>
             <version>1.9.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+        </dependency>
     </dependencies>
 
     <build>
